--- a/style.css
+++ b/style.css
@@ -1,1 +1,89 @@
-css
+div {
+    border-radius: 5px;
+}
+
+#header {
+    background-color: #668284;
+    z-index: 1;
+    position: fixed;
+    width: 98.7%;
+    margin-top: -20;
+    height: 6%;
+    margin-bottom: 10px;
+    
+}
+
+#name {
+    color: #ffffff;
+    font-family: Verdana, sans-serif;
+    font-size: 16px;
+    padding-top: 5px;
+    margin-left: 5px;
+    text-align: center;
+    position: relative;
+    line-height: 0.0;
+}
+
+h4 {
+    font-family: Courier;
+    margin-right: 30px;
+    margin-top: 0%;
+}
+
+.right p {
+    color: #505050;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-top: -10;
+    margin-right: 5px;
+    margin-left: 5px;
+}
+
+li {
+    list-style-type: square;
+}
+
+a:hover {
+    font-weight: bold;
+}
+
+/*.left {
+    position: relative;
+    float: left;
+    margin-top: 50px;
+    width: 11%;
+    height: 890px;
+    background-color: aquamarine;
+    margin-bottom: 10px;
+} */
+
+.right {
+    position: relative;
+    float: right;
+    margin-top: 50px;
+    width: 100%;
+    height: 640px;
+    background-color: #E8E8E8;
+    margin-bottom: 10px;
+}
+
+#footer {
+    position: relative;
+    height: 50px;
+    background-color: #668284;
+    clear: both;
+    font-family: Verdana, sans-serif;
+    font-size: 14px;
+    text-align: center;
+    color: #ffffff;
+    
+}
+
+
+#footer p {
+    position: relative;
+    padding-top: 15px;
+}
+
+embed {
+    position: right;
+}
