--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 div {
-    border-radius: 5px;
+    border-radius: 0px;
 }
 
 #header {
     background-color: #668284;
     z-index: 1;
     position: fixed;
-    width: 98.7%;
-    margin-top: -20;
+    width: 105%;
+    margin-top: -10px;
     height: 6%;
-    margin-bottom: 10px;
-    
+    margin-bottom: 20px;
+    margin-left: -10px;
 }
 
 #name {
@@ -33,7 +33,7 @@ h4 {
 .right p {
     color: #505050;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin-top: -10;
+    margin-top: ;
     margin-right: 5px;
     margin-left: 5px;
 }
@@ -61,8 +61,9 @@ a:hover {
     float: right;
     margin-top: 50px;
     width: 100%;
-    height: 640px;
+    height: 750px;
     background-color: #E8E8E8;
+    margin-right: 0px;
     margin-bottom: 10px;
 }
 
@@ -75,6 +76,9 @@ a:hover {
     font-size: 14px;
     text-align: center;
     color: #ffffff;
+    margin-bottom: -10px;
+    margin-left: 0px;
+    margin-right: 0px;
     
 }
 
@@ -85,5 +89,5 @@ a:hover {
 }
 
 embed {
-    position: right;
+    position: static;
 }
