--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@ div {
     background-color: #668284;
     z-index: 1;
     position: fixed;
-    width: 105%;
+    width: 99.3%;
     margin-top: -10px;
-    height: 6%;
+    height: 8%;
     margin-bottom: 20px;
     margin-left: -10px;
 }
@@ -17,10 +17,10 @@ div {
     color: #ffffff;
     font-family: Verdana, sans-serif;
     font-size: 16px;
-    padding-top: 5px;
+    padding-top: 15px;
     margin-left: 5px;
-    text-align: center;
-    position: relative;
+    text-align: left;
+    position: static;
     line-height: 0.0;
 }
 
@@ -61,8 +61,8 @@ a:hover {
     float: right;
     margin-top: 50px;
     width: 100%;
-    height: 750px;
-    background-color: #E8E8E8;
+    height: 680px;
+    background-color: #e7e7e7;
     margin-right: 0px;
     margin-bottom: 10px;
 }
@@ -90,4 +90,34 @@ a:hover {
 
 embed {
     position: static;
+}
+
+.btn {
+    background-color: #e7e7e7; /* Green */
+    border: none;
+    color: black;
+    padding: 10px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 11px;
+    text-shadow: inset 0 1px 0 rgba(255,255,255,0.2);
+    float: right;
+    margin: 0 0 0px 0px;
+    margin-right: 3px;
+    margin-top: -9px;
+    
+    
+}
+ 
+ .btn:nth-child(1) {
+     -webkit-transform: rotate(-3deg); 
+     -moz-transform: rotate(-3deg);
+ } 
+ 
+}
+
+body {
+    background-color: #e7e7e7;
 }
